--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "tags-flow",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gzippo": "~0.2.0",
+    "express": "~3.3.8"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-copy": "~0.4.1",
