--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "express": ">=3.3.8",
-    "supervisor": ">=0.5.5",
-    "passport": "~0.1.17",
-    "passport-facebook": "~1.0.0"
+    "supervisor": ">=0.5.5"
   },
   "engines": {
     "node": ">=0.8.0"
