--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "express": ">=3.3.8",
-    "supervisor": ">=0.5.5"
+    "supervisor": ">=0.5.5",
+    "fbgraph": "~0.2.7"
   },
   "engines": {
     "node": ">=0.8.0"
