--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "node": ">=0.8.0"
   },
   "scripts": {
-    "start": "PORT=5000 supervisor server.js",
-    "debug": "PORT=5000 node-inspector server.js"
+    "start": "PORT=5000 supervisor server.js"
   }
 }
