--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "fbgraph": "~0.2.7",
     "crypto": "0.0.3",
     "socket.io": "~0.9.16",
-    "twit": "~1.1.9"
+    "twit": "~1.1.9",
+    "superagent": "~0.15.4",
+    "expect.js": "~0.2.0",
+    "should": "~1.2.2"
   },
   "engines": {
     "node": ">=0.8.0"
