--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 node_modules
+.idea/*
 .DS_Store
 .tmp
 .sass-cache
 app/bower_components
 frontend/bower_components
+jasmine-1.1.0.js
+JasmineAdapter-1.1.2.js
