--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "twit": "~1.1.9",
     "superagent": "~0.15.4",
     "expect.js": "~0.2.0",
-    "should": "~1.2.2"
+    "should": "~1.2.2",
+    "chai": "~1.7.2"
   },
   "engines": {
     "node": ">=0.8.0"
